<resources>
    <string name="app_name">Hawker V</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="email">Email Address</string>
    <string name="hint_stall">What is your stall name?</string>
    <string name="hint_store">Where is your stall located?</string>
    <string name="login">Login</string>
    <string name="manage">Manage</string>
    <string name="orders">Orders</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="register">Register</string>
    <string name="set_location">Set Location</string>
    <string name="setup">Setup</string>
    <string name="settings">Settings</string>
    <string name="closed_message">Your stall is currently closed.</string>
    <string name="open">Open for the day</string>
    <string name="close">Close for the day</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price: RM</string>
    <string name="daily_stock">Daily Stock:</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="update_item">Update Item</string>
    <string name="add_item">Add Item</string>
    <string name="delete">Delete</string>
    <string name="complete">Complete</string>
    <string name="reject">Reject</string>

    <string name="error_email">Please enter an email with the correct format.</string>
    <string name="error_email_empty">Please enter an email.</string>
    <string name="error_password">Password must be at least 8 characters long.</string>
    <string name="error_password_empty">Please enter a password.</string>
    <string name="error_confirm">Password does not match.</string>
    <string name="error_stall_empty">Please enter your stall name.</string>
    <string name="error_store_empty">Please select a store.</string>
    <string name="error_field_empty">Please fill in this field.</string>
    <string name="error_image">Please select an image.</string>

    <string name="header_item">Item</string>
    <string name="header_table">Table No.</string>
    <string name="header_qty">Qty</string>
    <string name="header_price">Price (RM)</string>

    <string name="menu_logout">Logout</string>
    <string name="menu_close">Close Stall</string>

    <string name="title_activity_maps">Map</string>

    <string name="dialog_logout_title">Logout</string>
    <string name="dialog_logout_message">Are you sure you want to logout?</string>
    <string name="dialog_logout_yes">Logout</string>
    <string name="dialog_logout_no">Cancel</string>
    <string name="dialog_close_title">Close Stall</string>
    <string name="dialog_close_message">Are you sure you want to close the stall for the day?</string>
    <string name="dialog_close_yes">Close It</string>
    <string name="dialog_close_no">Cancel</string>
    <string name="dialog_delete_title">Delete Item</string>
    <string name="dialog_delete_message">Are you sure you want to delete this item?</string>
    <string name="dialog_completion_title">Complete Order</string>
    <string name="dialog_completion_message">Would you like to set the order as complete or rejected?</string>
    <string name="message_invalid_store">The selected location is not a store.</string>
    <string name="label_average_prep_time">Average Prep Time:</string>
    <string name="minute">minute(s)</string>
    <string name="stats">Statistics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overall">Overall</string>
    <string name="previous_session">Previous Session</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="channel_name">Hawker Orders</string>
    <string name="channel_description">Updates to the orders in the Hawker App</string>
</resources>