<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".OrdersFragment">

    <Button
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:background="@drawable/seperator"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/button_close">

        <TextView
            android:id="@+id/header_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/header_item"
            android:textStyle="bold"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/header_table"/>

        <TextView
            android:id="@+id/header_table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/header_table"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/header_item"
            app:layout_constraintRight_toLeftOf="@id/header_qty"/>

        <TextView
            android:id="@+id/header_qty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/header_qty"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/header_table"
            app:layout_constraintRight_toLeftOf="@id/header_price"/>

        <TextView
            android:id="@+id/header_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/header_price"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/header_qty"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/headers"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/row_order"/>

</androidx.constraintlayout.widget.ConstraintLayout>