<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="36dp"
    tools:context=".FormFragment">

    <ImageButton
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_delete_24"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="168dp"
        android:layout_height="168dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_select_image"
        android:background="@drawable/border"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/name_input_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_name"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintBottom_toTopOf="@id/label_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            tools:text="Bigger Burger"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/label_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/name_input_text"
        app:layout_constraintBottom_toTopOf="@id/label_stock"
        app:layout_constraintLeft_toLeftOf="@id/name_input_text"/>

    <EditText
        android:id="@+id/price"
        android:minWidth="72dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="0.00"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/label_price"
        app:layout_constraintBottom_toBottomOf="@id/label_price"
        app:layout_constraintLeft_toRightOf="@id/label_price"/>

    <TextView
        android:id="@+id/label_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_stock"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/label_price"
        app:layout_constraintBottom_toTopOf="@id/button_cancel"
        app:layout_constraintLeft_toLeftOf="@id/label_price"/>

    <EditText
        android:id="@+id/daily_stock"
        android:minWidth="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="0"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/label_stock"
        app:layout_constraintBottom_toBottomOf="@id/label_stock"
        app:layout_constraintLeft_toRightOf="@id/label_stock"/>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/label_stock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_done"
        app:layout_constraintHorizontal_chainStyle="packed"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <Button
        android:id="@+id/button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        app:layout_constraintTop_toTopOf="@id/button_cancel"
        app:layout_constraintBottom_toBottomOf="@id/button_cancel"
        app:layout_constraintLeft_toRightOf="@id/button_cancel"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>